bootstrap-fm.css
.container {
	padding: 15px;
	max-width: 900px;
}

.panel-default {
	padding: 15px;
}

hr {
	margin: 20px auto;
}

.btn-toolbar {
	margin-bottom: 20px;
}

.list-group-item:hover {
	background-color: rgba(86, 61, 124, 0.15);
}

.col-md-1 {
	padding: 0;
}

.col-size {
	padding-left: 10px;
}

.col-title {
	word-wrap: break;
	max-width: 800px;
	text-overflow: clip;
	overflow: hidden;
}

